@@ -3,6 +3,15 @@
 # These don't depend on any other macros.  Please don't change this.
 # ! in comments is used in generating HTML documentation, ignore it otherwise.
 
+#define OWN_VILLAGE X Y SIDE
+# Test if a given side owns the village at the specified location
+[have_location]
+	owner_side={SIDE}
+	x={X}
+	y={Y}
+[/have_location]
+#enddef
+
 #define IF VAR OP VAL CONTENTS
 # Shortcut for IF statements testing the value of a variable. Need to write
 # [then] and [else] tags manually.
